# esc-vote-spacetimedb

./: .env  .env.development  .gitignore  flake.nix  index.html  package-lock.json  package.json  spacetime.dev.json  spacetime.json
docs/: voting-spec-2025.md
spacetimedb/: Cargo.toml
spacetimedb/src/: country.rs  lib.rs  ranking.rs  round.rs  singleton.rs  user.rs  vote.rs  voter.rs
spacetimedb/src/round/: admin.rs  mod.rs
spacetimedb/src/vote/: mod.rs  submit.rs
src/: App.tsx  main.tsx  util.ts
src/pages/: Admin.tsx  Landing.tsx  Register.tsx  Vote.tsx
