[package]
name = "esc_vote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.0.3" }
spacetimedsl = "0.20.0"
log = "0.4"
strum = { version = "0.27", features = ["derive"] }
